垃圾收集器之引用计数算法示例